--- a/Figma.html
+++ b/Figma.html
@@ -16,26 +16,54 @@
     <style>
     body{
     background:#f2ebeb;} 
-    nav{
-        width: 41px;
-    height: 22px;
+    /*nav{
+    display:flex;
+
+    flex-shrink: 0;
+    flex-direction: row;
+    text-align: right;
+    width: 410px;
+    height: 12px;
+    top: -500;
+    left: 600;
     font-family: 'Nunito Sans', Helvetica, sans-serif;
     font-style: lighter;
     font-weight: 300;
     font-size: 16px;
-    padding: 0px 175px 0px;
+    padding: 900px -120px 500px;
     gap: 15px;
-    line-height: 22px;
-/* identical to box height */
-    display: flex;
-    align-items: center;
+    line-height: 220px;
+    margin: 500 -600 0 ;
+/* identical to box height 
     color: #0B4141;
+    text-decoration: none;
+}*/
+nav{
+    display:flex;
+
+
+    width: 410px;
+    height: 102px;
+    top: -500;
+    font-family: 'Nunito Sans', Helvetica, sans-serif;
+    font-style: lighter;
+    font-weight: 300;
+    font-size: 16px;
+    color: #0B4141;
+    text-decoration: none;
+    gap: 15px;
+    margin: auto;
+    line-height: 220px;
+}
+/* identical to box height 
+    color: #0B4141;
+    text-decoration: none;
 }
 h1{width: 1440px;
 height: 192px;
 
 /* H1 */
-
+h1{
 font-family: 'Montserrat', 'Motter Corpus Std', serif;
 font-style: normal;
 font-weight: 400;
@@ -59,6 +87,16 @@ flex-grow: 0;
 
 
 }
+a{
+    text-decoration: none;
+    color: #0B4141;
+}
+h1{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 1;
+}
 p{width: 747px;
 height: 192px;
 
@@ -75,19 +113,24 @@ text-align: center;
 
 color: #FFFFFF;
 
-
-/* Inside auto layout */
-
-flex: none;
+display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: auto;
+    padding: 500 0 10;
 order: 1;
 flex-grow: 0;}
     
 
-svg.ellipse{position: absolute;
+svg.ellipse{
+display: flex;
+align-items:flex-end;    
+position: absolute;
 width: 51.84px;
 height: 51.84px;
 left: 23.04px;
-top: 247.79px;
+top: 47.79px;
 
 /* Secondary */
 
@@ -95,7 +138,7 @@ background: #FFCCBC;
 opacity: 0.54;
 transform: rotate(-66.93deg);}
 
-nav:hover{
+nav a:hover{
 text-decoration: underline;
 text-decoration-color: #FFCCBC;}
 
@@ -114,18 +157,19 @@ opacity: 0.94;}
     #download{
     display: flex;
     flex-direction: row;
-    justify-content: right;
-    align-items: right;
-    padding: 0px 498px;
+    justify-content: left;
+    align-items: left;
     gap: 20px;
-    width: 163px;
+    left: 1600;
+    top: -20;
+    width: 2630px;
     height: 46px;
     }
     #black{
     position: absolute;
     width: 392px;
     height: 128px;
-    left: 524px;
+    left: 520px;
     top: 480.17px;
 
 
@@ -176,11 +220,16 @@ text-align: center;
 color: #FFCCBC;
 
 }
-#horse{position: center;
-width: 1224px;
+#horse{display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: flex-start;
+width: 124px;
 height: 688px;
 left: 108px;
-top: 156px;}
+top: 100px;
+margin:auto;
+padding: 10 10 10;}
 
 #bold{
     font-style: bold;
@@ -198,16 +247,19 @@ top: 156px;}
             
     </div>
     <nav>
-        <menu>Learn</menu>
-        <menu>About</menu>
-        <menu>Why</menu>
+        <menu><a href="./">Learn</a></menu>
+        <menu><a href="./">About</a></menu>
+        <menu><a href="./">Why</a></menu>
     </nav>
     <div>
+        <a href="./">
         <svg width="163" height="46" id="download" viewBox="0 0 163 46" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect width="163" height="46" rx="23" fill="#0B4141"/>
             <path d="M44.812 28V16.72H48.796C50.652 16.72 52.0813 17.2053 53.084 18.176C54.0973 19.1467 54.604 20.5387 54.604 22.352C54.604 24.1653 54.0973 25.5627 53.084 26.544C52.0813 27.5147 50.652 28 48.796 28H44.812ZM46.476 26.608H48.7C51.484 26.608 52.876 25.1893 52.876 22.352C52.876 19.5253 51.484 18.112 48.7 18.112H46.476V26.608ZM60.0436 28.144C59.2543 28.144 58.5716 27.9787 57.9956 27.648C57.4196 27.3173 56.9716 26.8533 56.6516 26.256C56.3423 25.648 56.1876 24.928 56.1876 24.096C56.1876 23.264 56.3423 22.5493 56.6516 21.952C56.9716 21.344 57.4196 20.8747 57.9956 20.544C58.5716 20.2133 59.2543 20.048 60.0436 20.048C60.8116 20.048 61.4836 20.2133 62.0596 20.544C62.6356 20.8747 63.0836 21.344 63.4036 21.952C63.7236 22.5493 63.8836 23.264 63.8836 24.096C63.8836 24.928 63.7236 25.648 63.4036 26.256C63.0836 26.8533 62.6356 27.3173 62.0596 27.648C61.4836 27.9787 60.8116 28.144 60.0436 28.144ZM60.0436 26.896C60.705 26.896 61.2383 26.656 61.6436 26.176C62.049 25.696 62.2516 25.0027 62.2516 24.096C62.2516 23.1893 62.049 22.5013 61.6436 22.032C61.2383 21.552 60.705 21.312 60.0436 21.312C59.3716 21.312 58.833 21.552 58.4276 22.032C58.0223 22.5013 57.8196 23.1893 57.8196 24.096C57.8196 25.0027 58.0223 25.696 58.4276 26.176C58.833 26.656 59.3716 26.896 60.0436 26.896ZM67.6699 28L64.6939 20.192H66.3579L68.4539 26.112L70.6139 20.192H71.8619L73.9899 26.144L76.1179 20.192H77.7019L74.7259 28H73.2539L71.1899 22.416L69.1419 28H67.6699ZM79.0891 28V20.192H80.6571V21.488C80.9238 21.0187 81.2865 20.6613 81.7451 20.416C82.2145 20.1707 82.7371 20.048 83.3131 20.048C85.1585 20.048 86.0811 21.0933 86.0811 23.184V28H84.4651V23.28C84.4651 22.608 84.3318 22.1173 84.0651 21.808C83.8091 21.4987 83.4038 21.344 82.8491 21.344C82.1985 21.344 81.6758 21.552 81.2811 21.968C80.8971 22.3733 80.7051 22.912 80.7051 23.584V28H79.0891ZM90.8519 28.144C89.9985 28.144 89.3585 27.904 88.9319 27.424C88.5159 26.944 88.3079 26.24 88.3079 25.312V16.72H89.9239V25.216C89.9239 26.272 90.3559 26.8 91.2199 26.8C91.3479 26.8 91.4652 26.7947 91.5719 26.784C91.6892 26.7733 91.8065 26.752 91.9239 26.72L91.8919 28.016C91.5292 28.1013 91.1825 28.144 90.8519 28.144ZM96.5124 28.144C95.723 28.144 95.0404 27.9787 94.4644 27.648C93.8884 27.3173 93.4404 26.8533 93.1204 26.256C92.811 25.648 92.6564 24.928 92.6564 24.096C92.6564 23.264 92.811 22.5493 93.1204 21.952C93.4404 21.344 93.8884 20.8747 94.4644 20.544C95.0404 20.2133 95.723 20.048 96.5124 20.048C97.2804 20.048 97.9524 20.2133 98.5284 20.544C99.1044 20.8747 99.5524 21.344 99.8724 21.952C100.192 22.5493 100.352 23.264 100.352 24.096C100.352 24.928 100.192 25.648 99.8724 26.256C99.5524 26.8533 99.1044 27.3173 98.5284 27.648C97.9524 27.9787 97.2804 28.144 96.5124 28.144ZM96.5124 26.896C97.1737 26.896 97.707 26.656 98.1124 26.176C98.5177 25.696 98.7204 25.0027 98.7204 24.096C98.7204 23.1893 98.5177 22.5013 98.1124 22.032C97.707 21.552 97.1737 21.312 96.5124 21.312C95.8404 21.312 95.3017 21.552 94.8964 22.032C94.491 22.5013 94.2884 23.1893 94.2884 24.096C94.2884 25.0027 94.491 25.696 94.8964 26.176C95.3017 26.656 95.8404 26.896 96.5124 26.896ZM104.663 28.144C104.119 28.144 103.634 28.0373 103.207 27.824C102.781 27.6107 102.439 27.3227 102.183 26.96C101.938 26.5973 101.815 26.1867 101.815 25.728C101.815 25.152 101.959 24.6987 102.247 24.368C102.546 24.0373 103.031 23.7973 103.703 23.648C104.386 23.4987 105.303 23.424 106.455 23.424H106.999V23.008C106.999 22.4 106.871 21.9627 106.615 21.696C106.359 21.4293 105.938 21.296 105.351 21.296C104.903 21.296 104.455 21.3653 104.007 21.504C103.559 21.632 103.101 21.84 102.631 22.128L102.135 20.992C102.541 20.704 103.047 20.4747 103.655 20.304C104.263 20.1333 104.845 20.048 105.399 20.048C106.466 20.048 107.255 20.304 107.767 20.816C108.279 21.3173 108.535 22.1067 108.535 23.184V28H107.015V26.704C106.823 27.152 106.525 27.504 106.119 27.76C105.714 28.016 105.229 28.144 104.663 28.144ZM104.983 26.992C105.559 26.992 106.039 26.7893 106.423 26.384C106.807 25.9787 106.999 25.4667 106.999 24.848V24.416H106.471C105.693 24.416 105.079 24.4533 104.631 24.528C104.194 24.6027 103.879 24.7307 103.687 24.912C103.506 25.0827 103.415 25.3227 103.415 25.632C103.415 26.0373 103.554 26.368 103.831 26.624C104.109 26.8693 104.493 26.992 104.983 26.992ZM113.737 28.144C113.054 28.144 112.452 27.984 111.929 27.664C111.417 27.3333 111.017 26.864 110.729 26.256C110.441 25.648 110.297 24.928 110.297 24.096C110.297 23.264 110.441 22.5493 110.729 21.952C111.017 21.344 111.417 20.8747 111.929 20.544C112.441 20.2133 113.044 20.048 113.737 20.048C114.324 20.048 114.846 20.176 115.305 20.432C115.764 20.688 116.105 21.0347 116.329 21.472V16.72H117.945V28H116.361V26.64C116.137 27.1093 115.79 27.4773 115.321 27.744C114.862 28.0107 114.334 28.144 113.737 28.144ZM114.153 26.896C114.814 26.896 115.348 26.656 115.753 26.176C116.158 25.696 116.361 25.0027 116.361 24.096C116.361 23.1893 116.158 22.5013 115.753 22.032C115.348 21.552 114.814 21.312 114.153 21.312C113.481 21.312 112.942 21.552 112.537 22.032C112.132 22.5013 111.929 23.1893 111.929 24.096C111.929 25.0027 112.132 25.696 112.537 26.176C112.942 26.656 113.481 26.896 114.153 26.896Z" fill="#FFCCBC"/>
-            </svg>            
-    </div>
+            </svg>     
+        </a>       
+    </div>    
+
 </header> 
 <main>
     <section>
@@ -265,7 +317,7 @@ top: 156px;}
 </section>
 <section id="sec">
     <h1>Toward infinity and beyond</h1>
-    <p >Discover your new favourite mascot. With her, boost your imagination and decorate your workspace. May Cornelia accompany you in your daily ife and in the most perilous missions you may encounter.<br> With her, give yourself the means to succeed, believe in <strong>yourself and in your dreams!</strong></p>
+    <p >Discover your new favourite mascot. With her, boost your imagination and decorate your workspace. May Cornelia accompany you in your daily ife and in the most perilous missions you may encounter.<br> <br>With her, give yourself the means to succeed, believe in <strong>yourself and in your dreams!</strong></p>
 </section>
 
         </main>    
